[package]
name = "whatf"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]

[dependencies]
time = "0.1.36"
flate2 = "0.2"
chan = "0.1.19"
glob = "0.2.11"
deque = "0.3.1"
regex = "0.2.1"
lazy_static = "0.2.2"
urlparse = "0.7.3"
hdrsample = "3.0"
rusoto = { version = "0.22.0", features = [ "s3" ] }
hyper = { git = "https://github.com/hyperium/hyper.git" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls.git" }
futures = "0.1.11"
xml-rs = "0.3"
tokio-core = "0.1.6"
toml = "0.3"
serde = "0.9.12"
serde_derive = "0.9.12"
nom = { version = "2.1.0", features = [ "verbose-errors" ] }
clap = "2.19"
log = "0.3.6"
env_logger = "0.4.2"
